Added another module

--- a/VerilogBasics/impl/pnr/project.pin.html
+++ b/VerilogBasics/impl/pnr/project.pin.html
@@ -50,15 +50,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>/home/sdev/Workspace/GowinEDA/GW1N-9C/VerilogBasics/impl/gwsynthesis/project.vg</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/impl/gwsynthesis/project.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>/home/sdev/Workspace/GowinEDA/TangNano-9K-example-main/led/src/9K_LED_project.cst</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/HwSetup.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
-<td>---</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/VerilogBasics.sdc</td>
 </tr>
 <tr>
 <td class="label">Version</td>
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Jun 26 13:08:31 2022
+<td>Sun Sep 11 20:20:18 2022
 </td>
 </tr>
 <tr>
@@ -121,7 +121,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">sys_rst_n</td>
@@ -130,6 +130,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>Y</td>
 <td>in</td>
 <td>IOL5[A]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">btn2</td>
+<td></td>
+<td>3/3</td>
+<td>Y</td>
+<td>in</td>
+<td>IOT2[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -141,6 +160,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
+</tr>
+<tr>
+<td class="label">extraLed</td>
+<td></td>
+<td>49/1</td>
+<td>Y</td>
+<td>out</td>
+<td>IOR24[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">led[0]</td>
@@ -279,7 +317,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">3/3</td>
-<td>-</td>
+<td>btn2</td>
 <td>in</td>
 <td>IOT2[A]</td>
 <td>LVCMOS18</td>
@@ -290,7 +328,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -479,7 +517,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">76/1</td>
@@ -496,7 +534,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">75/1</td>
@@ -513,7 +551,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">74/1</td>
@@ -530,7 +568,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">73/1</td>
@@ -547,7 +585,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">72/1</td>
@@ -564,7 +602,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">71/1</td>
@@ -581,7 +619,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">70/1</td>
@@ -598,7 +636,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">69/1</td>
@@ -615,7 +653,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">68/1</td>
@@ -632,7 +670,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">17/2</td>
@@ -1030,7 +1068,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>sys_rst_n</td>
 <td>in</td>
 <td>IOL5[A]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -1244,7 +1282,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">62/1</td>
@@ -1261,7 +1299,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">61/1</td>
@@ -1278,7 +1316,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">60/1</td>
@@ -1295,7 +1333,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">59/1</td>
@@ -1312,7 +1350,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">57/1</td>
@@ -1329,7 +1367,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">56/1</td>
@@ -1346,7 +1384,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">55/1</td>
@@ -1363,7 +1401,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">54/1</td>
@@ -1380,7 +1418,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">53/1</td>
@@ -1397,7 +1435,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">52/1</td>
@@ -1414,7 +1452,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">51/1</td>
@@ -1431,7 +1469,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">50/1</td>
@@ -1448,24 +1486,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">49/1</td>
-<td>-</td>
-<td>in</td>
+<td>extraLed</td>
+<td>out</td>
 <td>IOR24[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
+<td>LVCMOS33</td>
+<td>8</td>
 <td>UP</td>
 <td>NA</td>
-<td>NONE</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">48/1</td>
@@ -1482,7 +1520,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 </table>
 <br/>
