--- a/VerilogBasics/impl/gwsynthesis/project_syn_resource.html
+++ b/VerilogBasics/impl/gwsynthesis/project_syn_resource.html
@@ -29,10 +29,10 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">led (/home/sdev/Workspace/GowinEDA/TangNano-9K-example-main/led/src/LED.v)</td>
-<td align = "center">26</td>
-<td align = "center">-</td>
-<td align = "center">48</td>
+<td class="label">TopModule (/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/Top.v)</td>
+<td align = "center">44</td>
+<td align = "center">32</td>
+<td align = "center">37</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
