--- a/VerilogBasics/impl/pnr/project.power.html
+++ b/VerilogBasics/impl/pnr/project.power.html
@@ -59,15 +59,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>/home/sdev/Workspace/GowinEDA/GW1N-9C/VerilogBasics/impl/gwsynthesis/project.vg</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/impl/gwsynthesis/project.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>/home/sdev/Workspace/GowinEDA/TangNano-9K-example-main/led/src/9K_LED_project.cst</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/HwSetup.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
-<td>---</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/VerilogBasics.sdc</td>
 </tr>
 <tr>
 <td class="label">Version</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Jun 26 13:08:31 2022
+<td>Sun Sep 11 20:20:18 2022
 </td>
 </tr>
 <tr>
@@ -96,15 +96,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>8.969</td>
+<td>8.867</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>8.551</td>
+<td>8.597</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>0.418</td>
+<td>0.271</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.198</td>
+<td>25.195</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.802</td>
+<td>84.805</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,30 +192,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>0.086</td>
-<td>1.976</td>
-<td>2.474</td>
+<td>0.059</td>
+<td>1.984</td>
+<td>2.451</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.078</td>
+<td>0.040</td>
 <td>2.424</td>
-<td>6.256</td>
-</tr>
-<tr>
-<td>VCCO12</td>
-<td>1.200</td>
-<td>0.035</td>
-<td>0.003</td>
-<td>0.045</td>
+<td>6.160</td>
 </tr>
 <tr>
 <td>VCCO18</td>
 <td>1.800</td>
-<td>0.043</td>
-<td>0.064</td>
-<td>0.193</td>
+<td>0.021</td>
+<td>0.062</td>
+<td>0.149</td>
+</tr>
+<tr>
+<td>VCCO33</td>
+<td>3.300</td>
+<td>0.019</td>
+<td>0.013</td>
+<td>0.107</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -229,15 +229,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.008</td>
+<td>0.022</td>
 <td>NA</td>
-<td>6.250</td>
+<td>3.378</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>0.776
-<td>0.367
-<td>11.719
+<td>0.682
+<td>0.435
+<td>5.912
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -248,9 +248,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Block Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>led</td>
-<td>0.008</td>
-<td>0.008(0.000)</td>
+<td>TopModule</td>
+<td>0.022</td>
+<td>0.022(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -260,9 +260,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>sys_clk</td>
-<td>50.000</td>
-<td>0.009</td>
+<td>crystal_clk</td>
+<td>27.027</td>
+<td>0.023</td>
 </tr>
 </table>
 </div><!-- content -->
