--- a/VerilogBasics/impl/pnr/project.rpt.html
+++ b/VerilogBasics/impl/pnr/project.rpt.html
@@ -55,15 +55,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>/home/sdev/Workspace/GowinEDA/GW1N-9C/VerilogBasics/impl/gwsynthesis/project.vg</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/impl/gwsynthesis/project.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>/home/sdev/Workspace/GowinEDA/TangNano-9K-example-main/led/src/9K_LED_project.cst</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/HwSetup.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
-<td>---</td>
+<td>/home/sdev/Workspace/GowinEDA/Gowin_GW1NR-9/VerilogBasics/src/VerilogBasics.sdc</td>
 </tr>
 <tr>
 <td class="label">Version</td>
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Jun 26 13:08:31 2022
+<td>Sun Sep 11 20:20:18 2022
 </td>
 </tr>
 <tr>
@@ -94,22 +94,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td class="label">Place & Route Process</td>
 <td>Running placement:
    Placement Phase 0: CPU time = 0h 0m 0.022s, Elapsed time = 0h 0m 0.022s
-   Placement Phase 1: CPU time = 0h 0m 0.121s, Elapsed time = 0h 0m 0.121s
-   Placement Phase 2: CPU time = 0h 0m 0.003s, Elapsed time = 0h 0m 0.003s
+   Placement Phase 1: CPU time = 0h 0m 0.121s, Elapsed time = 0h 0m 0.122s
+   Placement Phase 2: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.002s
    Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
    Total Placement: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.342s, Elapsed time = 0h 0m 0.343s
-   Routing Phase 2: CPU time = 0h 0m 0.127s, Elapsed time = 0h 0m 0.127s
-   Total Routing: CPU time = 0h 0m 0.469s, Elapsed time = 0h 0m 0.47s
+   Routing Phase 1: CPU time = 0h 0m 0.339s, Elapsed time = 0h 0m 0.339s
+   Routing Phase 2: CPU time = 0h 0m 0.154s, Elapsed time = 0h 0m 0.155s
+   Total Routing: CPU time = 0h 0m 0.493s, Elapsed time = 0h 0m 0.494s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 242MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 243MB</td>
 </tr>
 </table>
 <br/>
@@ -124,12 +124,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>47/8640</td>
+<td>70/8640</td>
 <td>1%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>47(47 LUT, 0 ALU, 0 ROM16)</td>
+<td>70(37 LUT, 33 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -139,7 +139,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>26/6693</td>
+<td>44/6693</td>
 <td>1%</td>
 </tr>
 <tr>
@@ -149,7 +149,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>26/6480</td>
+<td>38/6480</td>
 <td>1%</td>
 </tr>
 <tr>
@@ -159,17 +159,17 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as FF</td>
-<td>0/213</td>
-<td>0%</td>
+<td>6/213</td>
+<td>2%</td>
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>28/4320</td>
+<td>38/4320</td>
 <td>1%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
-<td>8</td>
+<td>10</td>
 <td>-</td>
 </tr>
 <tr>
@@ -179,12 +179,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Input Buf</td>
-<td>2</td>
+<td>1</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Output Buf</td>
-<td>6</td>
+<td>7</td>
 <td>-</td>
 </tr>
 <tr>
@@ -260,7 +260,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 1</td>
-<td>1/25(4%)</td>
+<td>2/25(8%)</td>
 </tr>
 <tr>
 <td class="label">bank 2</td>
@@ -268,7 +268,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 3</td>
-<td>7/49(14%)</td>
+<td>8/49(16%)</td>
 </tr>
 </table>
 <br/>
@@ -314,7 +314,7 @@ Generate output files:
 <tr>
 <td class="label">sys_clk_d</td>
 <td>PRIMARY</td>
-<td> BL</td>
+<td> BR BL</td>
 </tr>
 </table>
 <br/>
@@ -356,7 +356,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">sys_rst_n</td>
@@ -365,6 +365,25 @@ Generate output files:
 <td>Y</td>
 <td>in</td>
 <td>IOL5[A]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">btn2</td>
+<td></td>
+<td>3/3</td>
+<td>Y</td>
+<td>in</td>
+<td>IOT2[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -376,6 +395,25 @@ Generate output files:
 <td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
+</tr>
+<tr>
+<td class="label">extraLed</td>
+<td></td>
+<td>49/1</td>
+<td>Y</td>
+<td>out</td>
+<td>IOR24[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">led[0]</td>
@@ -514,7 +552,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">3/3</td>
-<td>-</td>
+<td>btn2</td>
 <td>in</td>
 <td>IOT2[A]</td>
 <td>LVCMOS18</td>
@@ -525,7 +563,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -714,7 +752,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">76/1</td>
@@ -731,7 +769,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">75/1</td>
@@ -748,7 +786,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">74/1</td>
@@ -765,7 +803,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">73/1</td>
@@ -782,7 +820,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">72/1</td>
@@ -799,7 +837,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">71/1</td>
@@ -816,7 +854,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">70/1</td>
@@ -833,7 +871,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">69/1</td>
@@ -850,7 +888,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">68/1</td>
@@ -867,7 +905,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">17/2</td>
@@ -1265,7 +1303,7 @@ Generate output files:
 <td>sys_rst_n</td>
 <td>in</td>
 <td>IOL5[A]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -1479,7 +1517,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">62/1</td>
@@ -1496,7 +1534,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">61/1</td>
@@ -1513,7 +1551,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">60/1</td>
@@ -1530,7 +1568,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">59/1</td>
@@ -1547,7 +1585,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">57/1</td>
@@ -1564,7 +1602,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">56/1</td>
@@ -1581,7 +1619,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">55/1</td>
@@ -1598,7 +1636,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">54/1</td>
@@ -1615,7 +1653,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">53/1</td>
@@ -1632,7 +1670,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">52/1</td>
@@ -1649,7 +1687,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">51/1</td>
@@ -1666,7 +1704,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">50/1</td>
@@ -1683,24 +1721,24 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">49/1</td>
-<td>-</td>
-<td>in</td>
+<td>extraLed</td>
+<td>out</td>
 <td>IOR24[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
+<td>LVCMOS33</td>
+<td>8</td>
 <td>UP</td>
 <td>NA</td>
-<td>NONE</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">48/1</td>
@@ -1717,7 +1755,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.2</td>
+<td>3.3</td>
 </tr>
 </table>
 <br/>
